# apple-to-openai

./: .env.example  .gitignore  README.md  __main__.py  config.py  pyproject.toml  server.py
